# nlua

./: CMakeLists.txt  README  TODO  nluaMacros.cmake
doc/: Doxysfile.txt
include/nlua/: boxeddata.h  engine.h  getvalue.h  global.h  managed.h  match.h  metatable.h  nlua.h  nlua_export.h  object.h  objectregistry.h  plaintable.h  push.h  pushvalue.h  table.h  typename.h  userdata.h
include/nlua/details/: bind.h  callpush.h  cclosure.h
lua/: CMakeLists.txt  buildlua.cmake
lua/lua/src/: lua  luac
src/: CMakeLists.txt  engine.cpp  global.cpp  managed.cpp  nlua.cpp  object.cpp  objectregistry.cpp  plaintable.cpp  typename.cpp
test/: CMakeLists.txt  double.h  nluatest.h  numarray.h  test_double_userdata.cpp  test_double_wrap.cpp  test_pil_28_1_book.cpp  test_pil_28_1_free_lua_cfunctions.cpp  test_pil_28_1_free_plain_functions.cpp  test_pil_28_1_mem_lua_cfunctions.cpp  test_pil_28_1_mem_plain_functions.cpp  test_pil_28_2_book.cpp  test_pil_28_2_free_lua_cfunctions.cpp  test_pil_28_2_free_plain_functions.cpp  test_pil_28_2_mem_lua_cfunctions.cpp  test_pil_28_2_mem_plain_functions.cpp  test_pil_28_3_book.cpp  test_pil_28_3_free_lua_cfunctions.cpp  test_pil_28_3_free_plain_functions.cpp  test_pil_28_3_mem_lua_cfunctions.cpp  test_pil_28_3_mem_plain_functions.cpp  test_pil_28_4_book.cpp  test_pil_28_4_free_lua_cfunctions.cpp  test_pil_28_4_free_plain_functions.cpp  test_pil_28_4_mem_lua_cfunctions.cpp  test_pil_28_4_mem_plain_functions.cpp  test_pil_28_nlua.cpp
